{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 453,
  "lineage": "b732a1f7-e3b7-25a0-3b93-72603cfc578e",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "Elastic_IP_MyEC2InstancePublic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ddeccbabcf04ce4a",
            "association_id": "eipassoc-0e75881bfc81d3cd5",
            "domain": "vpc",
            "id": "eipalloc-0ddeccbabcf04ce4a",
            "instance": "i-054fdfd2e9ad7891a",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0dfbce03ab15aff60",
            "private_dns": "ip-10-0-48-101.ap-southeast-1.compute.internal",
            "private_ip": "10.0.48.101",
            "public_dns": "ec2-13-228-206-188.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.228.206.188",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "MyEC2Instance-Elastic-IP"
            },
            "tags_all": {
              "Name": "MyEC2Instance-Elastic-IP"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.Availability_Zones",
            "module.ec2.aws_instance.MyEC2InstancePublic",
            "module.ssh.aws_key_pair.SSH_Key_Pair",
            "module.ssh.tls_private_key.Create_SSH_Key",
            "module.vpc.aws_security_group.Private_Security_Group",
            "module.vpc.aws_security_group.Public_Security_Group",
            "module.vpc.aws_subnet.Private_Subnet",
            "module.vpc.aws_subnet.Public_Subnet",
            "module.vpc.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "MyEC2InstancePrivate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fa377108253bf620",
            "arn": "arn:aws:ec2:ap-southeast-1:047590809543:instance/i-0fe2b93a9ec6b3aed",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fe2b93a9ec6b3aed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-001348a2355b75615",
            "private_dns": "ip-10-0-15-8.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.15.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-071f95774cc914bbe",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cbd4adb68763be43",
            "tags": {
              "Name": "MyEC2Instance-0-Private"
            },
            "tags_all": {
              "Name": "MyEC2Instance-0-Private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-018e156f83c8c8239"
            ]
          },
          "dependencies": [
            "data.aws_availability_zones.Availability_Zones",
            "module.ssh.aws_key_pair.SSH_Key_Pair",
            "module.ssh.tls_private_key.Create_SSH_Key",
            "module.vpc.aws_security_group.Private_Security_Group",
            "module.vpc.aws_security_group.Public_Security_Group",
            "module.vpc.aws_subnet.Private_Subnet",
            "module.vpc.aws_subnet.Public_Subnet",
            "module.vpc.aws_vpc.MyVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fa377108253bf620",
            "arn": "arn:aws:ec2:ap-southeast-1:047590809543:instance/i-058c726a603556c78",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-058c726a603556c78",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dc392014b8b4f84f",
            "private_dns": "ip-10-0-20-154.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.20.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0350fba96d95e2b00",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0266e92188179844b",
            "tags": {
              "Name": "MyEC2Instance-1-Private"
            },
            "tags_all": {
              "Name": "MyEC2Instance-1-Private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-018e156f83c8c8239"
            ]
          },
          "dependencies": [
            "data.aws_availability_zones.Availability_Zones",
            "module.ssh.aws_key_pair.SSH_Key_Pair",
            "module.ssh.tls_private_key.Create_SSH_Key",
            "module.vpc.aws_security_group.Private_Security_Group",
            "module.vpc.aws_security_group.Public_Security_Group",
            "module.vpc.aws_subnet.Private_Subnet",
            "module.vpc.aws_subnet.Public_Subnet",
            "module.vpc.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "MyEC2InstancePrivateDatabase",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fa377108253bf620",
            "arn": "arn:aws:ec2:ap-southeast-1:047590809543:instance/i-075f2461e13dc2a62",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-075f2461e13dc2a62",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0facfa39cad70a6d9",
            "private_dns": "ip-10-0-9-112.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.9.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ab378fa71c77fa1b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cbd4adb68763be43",
            "tags": {
              "Name": "MyEC2Instance-0-Private-Database"
            },
            "tags_all": {
              "Name": "MyEC2Instance-0-Private-Database"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-018e156f83c8c8239"
            ]
          },
          "dependencies": [
            "data.aws_availability_zones.Availability_Zones",
            "module.ssh.aws_key_pair.SSH_Key_Pair",
            "module.ssh.tls_private_key.Create_SSH_Key",
            "module.vpc.aws_security_group.Private_Security_Group",
            "module.vpc.aws_security_group.Public_Security_Group",
            "module.vpc.aws_subnet.Private_Subnet",
            "module.vpc.aws_subnet.Public_Subnet",
            "module.vpc.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "MyEC2InstancePublic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fa377108253bf620",
            "arn": "arn:aws:ec2:ap-southeast-1:047590809543:instance/i-054fdfd2e9ad7891a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-054fdfd2e9ad7891a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dfbce03ab15aff60",
            "private_dns": "ip-10-0-48-101.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.48.101",
            "public_dns": "ec2-13-228-206-188.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.228.206.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0734f147e91bc08c8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04d0913a05e165a5a",
            "tags": {
              "Name": "MyEC2Instance-0-Public"
            },
            "tags_all": {
              "Name": "MyEC2Instance-0-Public"
            },
            "tenancy": "default",
            "timeouts": {
              "create": "1h30m",
              "delete": "20m",
              "update": "2h"
            },
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08afd1ea5850b8b73"
            ]
          },
          "dependencies": [
            "data.aws_availability_zones.Availability_Zones",
            "module.ssh.aws_key_pair.SSH_Key_Pair",
            "module.ssh.tls_private_key.Create_SSH_Key",
            "module.vpc.aws_security_group.Private_Security_Group",
            "module.vpc.aws_security_group.Public_Security_Group",
            "module.vpc.aws_subnet.Private_Subnet",
            "module.vpc.aws_subnet.Public_Subnet",
            "module.vpc.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "Elastic_IP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff7add8db67459c3",
            "association_id": "eipassoc-037104c7bd9a769cb",
            "domain": "vpc",
            "id": "eipalloc-0ff7add8db67459c3",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0048d666d060ac9f1",
            "private_dns": "ip-10-0-48-86.ap-southeast-1.compute.internal",
            "private_ip": "10.0.48.86",
            "public_dns": "ec2-47-128-166-31.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "47.128.166.31",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT Gateway-Elastic-IP"
            },
            "tags_all": {
              "Name": "NAT Gateway-Elastic-IP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Internet_Gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:047590809543:internet-gateway/igw-0623e0d54569a1168",
            "id": "igw-0623e0d54569a1168",
            "owner_id": "047590809543",
            "tags": {
              "Name": "Internet Gateway"
            },
            "tags_all": {
              "Name": "Internet Gateway"
            },
            "vpc_id": "vpc-06efcdd2c28b2dafd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_Gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff7add8db67459c3",
            "association_id": "eipassoc-037104c7bd9a769cb",
            "connectivity_type": "public",
            "id": "nat-0265b117c5acae62a",
            "network_interface_id": "eni-0048d666d060ac9f1",
            "private_ip": "10.0.48.86",
            "public_ip": "47.128.166.31",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04d0913a05e165a5a",
            "tags": {
              "Name": "NAT Gateway"
            },
            "tags_all": {
              "Name": "NAT Gateway"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.Availability_Zones",
            "module.vpc.aws_eip.Elastic_IP",
            "module.vpc.aws_internet_gateway.Internet_Gateway",
            "module.vpc.aws_subnet.Public_Subnet",
            "module.vpc.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private_Route_Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:047590809543:route-table/rtb-07350a33e0baf88f2",
            "id": "rtb-07350a33e0baf88f2",
            "owner_id": "047590809543",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0265b117c5acae62a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06efcdd2c28b2dafd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.Availability_Zones",
            "module.vpc.aws_eip.Elastic_IP",
            "module.vpc.aws_internet_gateway.Internet_Gateway",
            "module.vpc.aws_nat_gateway.NAT_Gateway",
            "module.vpc.aws_subnet.Public_Subnet",
            "module.vpc.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_Route_Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:047590809543:route-table/rtb-0c3650361c12e9409",
            "id": "rtb-0c3650361c12e9409",
            "owner_id": "047590809543",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0623e0d54569a1168",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06efcdd2c28b2dafd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.Internet_Gateway",
            "module.vpc.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private_Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0036b92e5050c57dd",
            "route_table_id": "rtb-07350a33e0baf88f2",
            "subnet_id": "subnet-0cbd4adb68763be43"
          },
          "dependencies": [
            "data.aws_availability_zones.Availability_Zones",
            "module.vpc.aws_eip.Elastic_IP",
            "module.vpc.aws_internet_gateway.Internet_Gateway",
            "module.vpc.aws_nat_gateway.NAT_Gateway",
            "module.vpc.aws_route_table.Private_Route_Table",
            "module.vpc.aws_subnet.Private_Subnet",
            "module.vpc.aws_subnet.Public_Subnet",
            "module.vpc.aws_vpc.MyVPC"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02dd8b2cb3bbd14a2",
            "route_table_id": "rtb-07350a33e0baf88f2",
            "subnet_id": "subnet-0266e92188179844b"
          },
          "dependencies": [
            "data.aws_availability_zones.Availability_Zones",
            "module.vpc.aws_eip.Elastic_IP",
            "module.vpc.aws_internet_gateway.Internet_Gateway",
            "module.vpc.aws_nat_gateway.NAT_Gateway",
            "module.vpc.aws_route_table.Private_Route_Table",
            "module.vpc.aws_subnet.Private_Subnet",
            "module.vpc.aws_subnet.Public_Subnet",
            "module.vpc.aws_vpc.MyVPC"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff53b0ba5927a499",
            "route_table_id": "rtb-07350a33e0baf88f2",
            "subnet_id": "subnet-03a73b2dfef3a65d1"
          },
          "dependencies": [
            "data.aws_availability_zones.Availability_Zones",
            "module.vpc.aws_eip.Elastic_IP",
            "module.vpc.aws_internet_gateway.Internet_Gateway",
            "module.vpc.aws_nat_gateway.NAT_Gateway",
            "module.vpc.aws_route_table.Private_Route_Table",
            "module.vpc.aws_subnet.Private_Subnet",
            "module.vpc.aws_subnet.Public_Subnet",
            "module.vpc.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bec060b2f70b2b44",
            "route_table_id": "rtb-0c3650361c12e9409",
            "subnet_id": "subnet-04d0913a05e165a5a"
          },
          "dependencies": [
            "data.aws_availability_zones.Availability_Zones",
            "module.vpc.aws_internet_gateway.Internet_Gateway",
            "module.vpc.aws_route_table.Public_Route_Table",
            "module.vpc.aws_subnet.Public_Subnet",
            "module.vpc.aws_vpc.MyVPC"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09260197ad0dc2062",
            "route_table_id": "rtb-0c3650361c12e9409",
            "subnet_id": "subnet-0ef57b28a519b6e66"
          },
          "dependencies": [
            "data.aws_availability_zones.Availability_Zones",
            "module.vpc.aws_internet_gateway.Internet_Gateway",
            "module.vpc.aws_route_table.Public_Route_Table",
            "module.vpc.aws_subnet.Public_Subnet",
            "module.vpc.aws_vpc.MyVPC"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05af8f2fe270f72d5",
            "route_table_id": "rtb-0c3650361c12e9409",
            "subnet_id": "subnet-0eeb012af84d9a823"
          },
          "dependencies": [
            "data.aws_availability_zones.Availability_Zones",
            "module.vpc.aws_internet_gateway.Internet_Gateway",
            "module.vpc.aws_route_table.Public_Route_Table",
            "module.vpc.aws_subnet.Public_Subnet",
            "module.vpc.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Private_Security_Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:047590809543:security-group/sg-018e156f83c8c8239",
            "description": "Private Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outgoing traffics",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018e156f83c8c8239",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08afd1ea5850b8b73"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Private Security Group",
            "name_prefix": "",
            "owner_id": "047590809543",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Private Security Group"
            },
            "tags_all": {
              "Name": "Private Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-06efcdd2c28b2dafd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.Public_Security_Group",
            "module.vpc.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Public_Security_Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:047590809543:security-group/sg-08afd1ea5850b8b73",
            "description": "Public Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outgoing traffics",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08afd1ea5850b8b73",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "171.240.29.100/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Public Security Group",
            "name_prefix": "",
            "owner_id": "047590809543",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public Security Group"
            },
            "tags_all": {
              "Name": "Public Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-06efcdd2c28b2dafd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:047590809543:subnet/subnet-0cbd4adb68763be43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cbd4adb68763be43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "047590809543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet-0"
            },
            "tags_all": {
              "Name": "Private Subnet-0"
            },
            "vpc_id": "vpc-06efcdd2c28b2dafd"
          },
          "dependencies": [
            "data.aws_availability_zones.Availability_Zones",
            "module.vpc.aws_vpc.MyVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:047590809543:subnet/subnet-0266e92188179844b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0266e92188179844b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "047590809543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet-1"
            },
            "tags_all": {
              "Name": "Private Subnet-1"
            },
            "vpc_id": "vpc-06efcdd2c28b2dafd"
          },
          "dependencies": [
            "data.aws_availability_zones.Availability_Zones",
            "module.vpc.aws_vpc.MyVPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:047590809543:subnet/subnet-03a73b2dfef3a65d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a73b2dfef3a65d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "047590809543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet-2"
            },
            "tags_all": {
              "Name": "Private Subnet-2"
            },
            "vpc_id": "vpc-06efcdd2c28b2dafd"
          },
          "dependencies": [
            "data.aws_availability_zones.Availability_Zones",
            "module.vpc.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:047590809543:subnet/subnet-04d0913a05e165a5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.48.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d0913a05e165a5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "047590809543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet-0"
            },
            "tags_all": {
              "Name": "Public Subnet-0"
            },
            "vpc_id": "vpc-06efcdd2c28b2dafd"
          },
          "dependencies": [
            "data.aws_availability_zones.Availability_Zones",
            "module.vpc.aws_vpc.MyVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:047590809543:subnet/subnet-0ef57b28a519b6e66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.49.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef57b28a519b6e66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "047590809543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet-1"
            },
            "tags_all": {
              "Name": "Public Subnet-1"
            },
            "vpc_id": "vpc-06efcdd2c28b2dafd"
          },
          "dependencies": [
            "data.aws_availability_zones.Availability_Zones",
            "module.vpc.aws_vpc.MyVPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:047590809543:subnet/subnet-0eeb012af84d9a823",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eeb012af84d9a823",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "047590809543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet-2"
            },
            "tags_all": {
              "Name": "Public Subnet-2"
            },
            "vpc_id": "vpc-06efcdd2c28b2dafd"
          },
          "dependencies": [
            "data.aws_availability_zones.Availability_Zones",
            "module.vpc.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "MyVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:047590809543:vpc/vpc-06efcdd2c28b2dafd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a867e74b31550a1e",
            "default_route_table_id": "rtb-011919e931221a7d6",
            "default_security_group_id": "sg-07a8e75cdbd8eb052",
            "dhcp_options_id": "dopt-0713d922f5234f1ac",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06efcdd2c28b2dafd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-011919e931221a7d6",
            "owner_id": "047590809543",
            "tags": {
              "Name": "My VPC"
            },
            "tags_all": {
              "Name": "My VPC"
            }
          }
        }
      ]
    }
  ]
}